<resources>
    <string name="app_name">Софбус 24</string>
    <string name="ss_name">Софийски градски транспорт</string>
    <string name="btn_gps">Виртуални табла</string>
    <string name="gps_msg">Моля въведете код (цифри) или име (на кирилица или латиница) на спирка:</string>
    <string name="btn_map">GPS времена - Google Maps</string>
    <string name="btn_schedule">Разписания</string>
    <string name="btn_favourite">Любими</string>
    <string name="btn_options">Настройки</string>
    <string name="ss_gps_map_msg_title">Грешка</string>
    <string name="ss_gps_map_msg_body">Моля включете поне едно от устройствата (GPS или WiFi), за да бъде засечено текущото ви местоположение.</string>
    <string name="hs_button1">Бутон 1</string>
    <string name="hs_button2">Бутон 2</string>
    <string name="hs_button3">Бутон 3</string>
    <string name="hs_button4">Бутон 4</string>
    <string name="hs_button5">Бутон 5</string>
    <string name="hs_button6">Бутон 6</string>
    <string name="sumc_captcha">Тест за сигурност</string>
    <string name="sumc_captcha_msg">Моля въведете символите от изображението:</string>
    <string name="sumc_button_label">OK</string>
    <string name="gps_station_choice_name">&lt;u>Изберете спирка&lt;/u></string>
    <string name="gps_station_choice_station_code">Номер на спирка:&#160;</string>
    <string name="gps_station_choice_error_internet">Възникна грешка при извличането на информация. Моля проверете вашата интернет връзка и опитайте отново.</string>
    <string name="gps_station_choice_error_info">Няма намерена информация.</string>
    <string name="vb_help_title">&lt;u>Кирилица на Латиница&lt;/u></string>
    <string name="vb_help_summary1">\"А\" = \"A\"\n\"Б\" = \"B\"\n\"В\" = \"V\"\n\"Г\" = \"G\"\n\"Д\" = \"D\"\n\"Е\" = \"E\"\n\"Ж\" = \"Zh\"\n\"З\" = \"Z\"\n\"И\" = \"I\"
		\n\"Й\" = \"J\"\n\"К\" = \"K\"\n\"Л\" = \"L\"\n\"М\" = \"M\"\n\"Н\" = \"N\"\n\"О\" = \"O\"\n</string>
    <string name="vb_help_summary2">\"П\" = \"P\"\n\"Р\" = \"R\"\n\"С\" = \"S\"\n\"Т\" = \"T\"\n\"У\" = \"U\"\n\"Ф\" = \"F\"\n\"Х\" = \"H\"\n\"Ц\" = \"C\"\n\"Ч\" = \"Ch\"
		\n\"Ш\" = \"Sh\"\n\"Щ\" = \"Sht\"\n\"Ъ\" = \"Y\"\n\"Ь\" = \"J\"\n\"Ю\" = \"Yu\"\n\"Я\" = \"Ya\"</string>
    <string name="gps_name">Виртуални табла</string>
    <string name="gps_err_dialog_title">Грешка</string>
    <string name="gps_fav_dialog_title">Любими</string>
    <string name="gps_err_dialog_msg">Възникна грешка при извличането на информация. Моля проверете вашата интернет връзка и опитайте отново.</string>
    <string name="gps_favourite_add">Добави в \"Любими\"</string>
    <string name="gps_see_map">Виж на картата</string>
    <string name="gps_error_unknown">Грешка при трансфера на информация</string>
    <string name="gps_error_noInfo" formatted="false">Няма информация за спирка \"%s\"</string>
    <string name="gps_error_noBus" formatted="false">Спирката \"%s\" не съществува</string>
    <string name="gps_error_noBusEmpty">Според сайта за градска мобилност, не съществува такава спирка.</string>
    <string name="gps_error_noCoordinates">Спирката не може да бъде визуализирана (не са намерени нейните координати в базата от данни).</string>
    <string name="gps_map_station_choice_name">&lt;u>Изберете спирка&lt;/u></string>
    <string name="gps_map_station_choice_error_summary">Възникна грешка при трансфера на информация. Моля опитайте отново.</string>
    <string name="gps_map_station_choice_distance">Разстояние:&#160;</string>
    <string name="gps_map_station_choice_meters">&#160;метра</string>
    <string name="map_gps_name">Виртуални табла - Google Maps</string>
    <string name="map_gps_menu_item_distance">Маршрут</string>
    <string name="map_gps_menu_item_focus">Позиционирай</string>
    <string name="map_gps_menu_item_help">Помощ</string>
    <string name="map_gps_menu_item_clean">Изчисти</string>
    <string name="map_gps_no_last_location">Моля изчакайте координатите Ви да бъдат засечени.</string>
    <string name="map_gps_route_error">Нужна е интернет връзка, за да се визуалзира маршрута (или има проблем със сървъра на GoogleMaps).</string>
    <string name="map_gps_distance_OK" formatted="false">Разтоянието от текущата позиция до избраната от Вас спирка е %s метра.</string>
    <string name="map_gps_distance_ERR">Моля изберете спирка.</string>
    <string name="map_help_label">Помощ</string>
    <string name="map_help_text">\ Първоначално визуализираните спирки са 8-те (по подразбиране) най-близки около вас (&lt;i>синият маркер&lt;/i>),
        както и добавените в \"Любими\". Избирайки точка на карата ще се визуализират и 8-те (по подразбиране) най-близки около нея.&lt;br/>&lt;br/>Натискайки 
        върху всяка спирка, се появява балонче с информация относно нейното име и номер. Това балонче е &lt;b>линк&lt;/b>        към подробна информация относно разписанието на преминаващите коли през съответната спирка.</string>
    <string name="map_help_btn_label">OK</string>
    <string name="veh_ch_name">Разписание на колите</string>
    <string name="veh_ch_image">Изображение на превозното средство</string>
    <string name="veh_ch_direction_choice">Изберете направление</string>
    <string name="veh_ch_coordinates_error">(няма координати в БД)</string>
    <string name="veh_ch_direction_choice_error_msg">В момента не е налична информация за тази линия или имате проблем с вашата интернет връзка.</string>
    <string name="veh_ch_search_box">Търсене по номер</string>
    <string name="st_ch_name">Направления</string>
    <string name="st_ch_menu_item_route">Маршрут</string>
    <string name="st_ch_menu_item_help">Помощ</string>
    <string name="st_ch_menu_err_title">Грешка</string>
    <string name="st_ch_menu_err_msg">Спирките по тази линия не могат да бъдат визуализирани, тъй като не са намерени 
        в базата от данни.</string>
    <string name="st_ch_help_text">\ Всяка спирка от списъка е линк към GoogleMaps, даващ информация за разписанието и 
        местоположението на съответната спирка. Въведено е и допълнително меню, визуализиращо се при продължително 
        задържане върху желаната спирка, със следните опции:&lt;br/>
         * &lt;b>Разписание&lt;/b> - информация за разписанието за избраната спирка;&lt;br/>
         * &lt;b>Виртуални табла&lt;/b> - информация за часовете на пристигане в реално време за избраната спирка;&lt;br/>&lt;br/>
        Добавянето или премахването на спирки в \"Любими\", става посредством натискането на звездата пред нея.&lt;br/> 
        Чрез контекстно меню, се предоставя възможност и за визуализирането на маршрута на избраното превозното 
        средство.</string>
    <string name="st_list_cont_menu_header">Изберете</string>
    <string name="st_list_schedule">Разписание</string>
    <string name="st_list_gps">Виртуални табла</string>
    <string name="st_inf_name" formatted="false">Информация за %s</string>
    <string name="st_inf_time" formatted="false">Информация към %s</string>
    <string name="st_inf_satelite_image">Изглед на картата</string>
    <string name="st_inf_fav_ok">Спирката беше добавено успешно в \"Любими\".</string>
    <string name="st_inf_fav_err">Спирката вече е била добавена в \"Любими\".</string>
    <string name="st_inf_menu_position">Позиционирай</string>
    <string name="st_inf_direction">Посока</string>
    <string name="st_inf_times_arrival">Часове на пристигане</string>
    <string name="st_inf_times_remaining">Оставащо време</string>
    <string name="st_inf_route_title">Информация за \"</string>
    <string name="fav_info">Избрани спирки</string>
    <string name="fav_delete">Изтрий първата</string>
    <string name="fav_delete_all">Изтрий всички</string>
    <string name="fav_menu_rename">Преименувай</string>
    <string name="fav_menu_rename_title">Преименувай</string>
    <string name="fav_menu_rename_msg">Въведете новото име на спирката:</string>
    <string name="fav_menu_delete">Изтрий</string>
    <string name="pref_name">Настройки</string>
    <string name="pref_category_common">ОБЩИ</string>
    <string name="common_home_screen_title">Начален екран</string>
    <string name="common_home_screen_summary">Избор на начален екран</string>
    <string name="common_language_title">Език</string>
    <string name="common_language_summary">Избор на език</string>
    <string name="pref_category_home_screen">НАЧАЛЕН ЕКРАН</string>
    <string name="home_screen_gps_map_title">Бутон \"GPS Google Maps\"</string>
    <string name="home_screen_gps_map_summary">Избор на функционалност на бутона \"GPS Времена Google Maps\"</string>
    <string name="home_screen_exit_title">Бутон \"Изход\"</string>
    <string name="home_screen_exit_summary">Използване на диалогов прозорец при изход</string>
    <string name="pref_category_stations">ИНФОРМАЦИЯ ЗА СПИРКИ</string>
    <string name="stations_timeGPS_title">Виртуални табла</string>
    <string name="stations_timeGPS_summary">Оставащо време или времена на пристигане</string>
    <string name="stations_timeSchedule_title">Разписания</string>
    <string name="stations_timeSchedule_summary">Оставащо време или времена на пристигане</string>
    <string name="stations_closestST_title">Брой най-близки спирки</string>
    <string name="stations_closestST_summary">Колко спирки да се визуализират около текущото местоположение или избрана точка</string>
    <string name="stations_timeInfoRetrieval_title">Извлечена информация</string>
    <string name="stations_timeInfoRetrieval_summary">Определяне на кое време да се използва за показване/пресмятане на извлечената информация (Виртуални табла)</string>
    <string name="pref_category_map">КАРТА</string>
    <string name="map_satellite_title">Изглед на картата</string>
    <string name="map_satellite_summary">Сателитна или Street View карта</string>
    <string name="map_compass_title">Компас</string>
    <string name="map_compass_summary">Покажи стрелка за ориентация на посоката (в GPS GoogleMaps)</string>
    <string name="map_mapView_title">Режим на картата</string>
    <string name="map_mapView_summary">Покажи икона за смяна на режима на картата (в горния десен ъгъл)</string>
    <string name="map_position_title">Позициониране</string>
    <string name="map_position_summary">Позиционирай картата при промяна на текущото местоположение (в GPS GoogleMaps)</string>
    <string name="pref_category_other">ДРУГИ</string>
    <string name="other_info_title">Информация</string>
    <string name="other_info_summary">Информация за продукта</string>
    <string name="about_label">Софбус 24 (версия 1.15)</string>
    <string name="about_text">Android системата предоставя подробна информация, свързана с използването на градския транпорт 
        в София, като часове на пристигане в реално време, разписания на превозните средства, разположения на спирките 
        на територията на София, както и локализиране на най-близките спирки, в зависимост от текущото местоположение.
        \n\n<i>Данните се извличат от: <b><u>http://m.sumc.bg</u></b></i> \n\n<b>Автор: Здравко Несторов</b></string>
    <string name="about_btn_label">OK</string>
    <string name="btn_exit">Изход</string>
    <string name="exit_msg">Сигурни ли сте, че искате да излезете от приложението?</string>
    <string name="remaining_minutes">м</string>
    <string name="remaining_hours">ч</string>
    <string name="title_bus">Автобус</string>
    <string name="title_buses">Автобуси:&#160;</string>
    <string name="title_trolley">Тролей</string>
    <string name="title_trolleys">Тролеи:&#160;</string>
    <string name="title_tram">Трамвай</string>
    <string name="title_trams">Трамваи:&#160;</string>
    <string name="choose_vehicle_number">Изберете номер на&#160;</string>
    <string name="button_title_ok">ОК</string>
    <string name="button_title_cancel">Отказ</string>
    <string name="button_title_help">Помощ</string>
    <string name="button_title_yes">Да</string>
    <string name="button_title_no">Не</string>
</resources>