<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#F5F5F5"
    android:orientation="vertical" >

    <!-- <include layout="@layout/action_bar" /> -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/btn_gps"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/button_gps"
                    android:clickable="true"
                    android:contentDescription="@string/hs_button1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/btn_map"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/button_gps_map"
                    android:clickable="true"
                    android:contentDescription="@string/hs_button2.1" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="40dip"
            android:paddingTop="92dip"
            android:text="@string/hs_button1"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="192dip"
            android:paddingTop="86dip"
            android:text="@string/hs_button2.1"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="192dip"
            android:paddingTop="99dip"
            android:text="@string/hs_button2.2"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/btn_schedule"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/button_sch"
                    android:clickable="true"
                    android:contentDescription="@string/hs_button3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/btn_favourite"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/button_fav"
                    android:clickable="true"
                    android:contentDescription="@string/hs_button4" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="55dip"
            android:paddingTop="92dip"
            android:text="@string/hs_button3"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="206dip"
            android:paddingTop="92dip"
            android:text="@string/hs_button4"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/btn_options"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/button_settings"
                    android:clickable="true"
                    android:contentDescription="@string/hs_button5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/btn_exit"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/button_exit"
                    android:clickable="true"
                    android:contentDescription="@string/hs_button6" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="59dip"
            android:paddingTop="92dip"
            android:text="@string/hs_button5"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="211dip"
            android:paddingTop="92dip"
            android:text="@string/hs_button6"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>